# mac-benchmark

./: Cargo.toml  GLOSSARY.md  README.md
crates/ane-bench/: Cargo.toml
crates/ane-bench/src/: lib.rs
crates/bench-core/: Cargo.toml
crates/bench-core/src/: lib.rs
crates/cpu-bench/: Cargo.toml
crates/cpu-bench/src/: lib.rs
crates/gpu-bench/: Cargo.toml
crates/gpu-bench/src/: lib.rs
crates/gpu-bench/src/shaders/: matmul.metal
crates/mem-bench/: Cargo.toml
crates/mem-bench/src/: bench.rs  lib.rs  tests.rs
crates/sysinfo/: Cargo.toml
crates/sysinfo/src/: lib.rs
src/: bench.rs  cpu_bench.rs  dashboard.rs  gpu_bench.rs  helpers.rs  main.rs  sysinfo.rs  tests.rs
src/shaders/: bandwidth.metal  throughput.metal
