[workspace]
members = [
    "crates/bench-core",
    "crates/mem-bench",
    "crates/cpu-bench",
    "crates/gpu-bench",
    "crates/sysinfo",
]
resolver = "3"

[package]
name = "mac-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bench-core = { path = "crates/bench-core" }
mem-bench = { path = "crates/mem-bench" }
cpu-bench = { path = "crates/cpu-bench" }
mac-sysinfo = { path = "crates/sysinfo" }
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
gpu-bench = { path = "crates/gpu-bench" }
